init.d/vz-redhat: fix a bashism
From a Debian bug report:

"""
I've ran checkbashisms (from the 'devscripts' package) over the whole
archive and I found that your package has a /bin/sh script that uses a
"bashism".

checkbashisms' output:
> possible bashism in ./etc/init.d/vz line 319 (let ...):
>		  let iter++
"""

https://bugzilla.openvz.org/3148
https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=772387

Reported-by: Raphael Geissert <atomo64@gmail.com>
Reported-by: Ola Lundqvist <ola@inguza.com>
Acked-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -315,7 +315,7 @@ start_ves()
 		pid=$!
 		eval VE_${pid}=${veid}
 		pids="$pids $pid"
-		let iter++
+		iter=$(($iter+1))
 		if [ ${iter} -ge ${VE_PARALLEL} ]; then
 			echo
 			for pid in ${pids}; do
