vzctl snapshot-delete: ignore ploop 'no guid found'
If a snapshot is created by means of vzctl, but later removed
via ploop tool directly, it results in failure of vzctl snapshot-delete.

This patch solves it by ignoring 'no guid found" error from
ploop_delete_snapshot(), so we can proceed and remove other parts
of the snapshot (ve.conf, dump file) and a record in Snapshots.xml.

Based on patch by Igor Sukhih <igor@openvz.org>

As this requires a recent change in ploop git (commit be9eda2),
fix ploop-lib and ploop-devel requirements in spec to require version
newer than the last released one, and also add an appropriate check
to configure.ac.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -184,6 +184,11 @@ or use ./configure --without-ploop] ) ]
 		[ AC_MSG_ERROR( [
 The ploop library headers are too old. You need ploop 1.8 or later] ) ],
 		[[#include "ploop/libploop.h"]])
+	AC_CHECK_DECL(SYSEXIT_NOSNAP, ,
+		[ AC_MSG_ERROR( [
+The ploop library headers are too old. You need ploop 1.13 or later] ) ],
+		[[#include "ploop/libploop.h"]])
+
 	]
 )
 
