vzeventd(8): document new behavior
As per previous commit, vzeventd now processes all known events.
Document it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzeventd.8.in
+++ b/man/vzeventd.8.in
@@ -1,4 +1,4 @@
-.TH vzeventd 8 "14 Jan 2013" "OpenVZ" "Containers"
+.TH vzeventd 8 "7 Apr 2015" "OpenVZ" "Containers"
 .SH NAME
 vzeventd \- the OpenVZ events daemon.
 .SH SYNOPSIS
@@ -13,27 +13,32 @@ vzeventd \- the OpenVZ events daemon.
 This daemon takes care of events sent by the OpenVZ kernel
 (via a netlink socket) and performs required actions associated with
 those events, by running specific scripts. Every event received contains
-a container ID, which is passed to the script as \fBVEID\fR environment
-variable.
+an event name and a container ID.
 .P
-Current list of known events and associated \fBvzeventd\fR actions are:
+For every known event, the event script @SCRIPTDIR@/vzevent-\fIevent_name\fR
+is executed, with container ID being passed to the script as
+\fBVEID\fR environment variable. Not-existent events scripts are ignored.
+All unknown events are ignored but logged.
 .TP
-.B start
-Ignore.
+The following events are recognized:
+.br
+.B \(bu start
+.br
+.B \(bu stop
+.br
+.B \(bu mount
+.br
+.B \(bu umount
+.br
+.B \(bu reboot
+.P
+The following event scripts are provided:
 .TP
-.B stop
-Run @SCRIPTDIR@/vzevent-stop. This script takes care of removing
-ARP and routing records for the given CT from CT0.
+.B vzevent-stop
+Takes care of removing ARP and routing records for the given CT from CT0.
 .TP
-.B mount
-Ignore.
-.TP
-.B umount
-Ignore.
-.TP
-.B reboot
-Run @SCRIPTDIR@/vzevent-reboot. This script takes care of
-rebooting a given CT.
+.B vzevent-reboot
+Takes care of rebooting a given CT.
 .SH OPTIONS
 .TP
 .B \-v
@@ -47,7 +52,7 @@ Display help and exit.
 .SH EXIT STATUS
 Returns 0 upon success.
 .SH LICENSE
-Copyright (C) 2010-2013, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2010-2015, Parallels, Inc. Licensed under GNU GPL.
 .SH AUTHOR
 .PP
 This manual page was initially written by Thorsten Schifferdecker
