vz.conf: allow list of interfaces in NEIGHBOUR_DEVS
Historically, allowed values for NEIGHBOUR_DEVS were either "detect"
or any other value, in the last case "all devices" are assumed.

It's time to change it. From now on, NEIGHBOUR_DEVS can be one of:

* all (or empty string, or unset) -- old behavior (all devices are used

* detect -- same as before, devices to use for ARP are detected

* list:* -- devices are explicitly listed (as in "list:eth1 eth2")

Man page vz.conf(5) is modified accordingly. While at it, NEIGHBOUR_DEVS
documentation is expanded.

Currently, any value other than described above leads to a printed warning
and "all" is assumed. This warning will later be changed to an error.

Based on suggestion and a patch from Dmitry V. Levin <ldv@altlinux.org>

https://bugzilla.openvz.org/1289
https://bugzilla.openvz.org/3192

Cc: Dmitry V. Levin <ldv@altlinux.org>
Reported-by: Alexander Prinsier <openvz@aphexer.mailhaven.com>
Reported-by: Avi Brender <abrender@elitehosts.com>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5.in
+++ b/man/vz.conf.5.in
@@ -1,4 +1,4 @@
-.TH vz.conf 5 "5 Dec 2012" "OpenVZ" "Containers"
+.TH vz.conf 5 "20 Apr 2015" "OpenVZ" "Containers"
 .SH NAME
 vz.conf \- global OpenVZ configuration file
 .SH SYNOPSIS
@@ -80,12 +80,20 @@ This parameter specifies the network device name which IP address will be
 used as the source IP. This is helpful in case more than one network
 interface is configured on HN and there is a need to specify the source
 IP address. Default is the first device in the network device list.
-.IP \fBNEIGHBOUR_DEVS\fR="\fBdetect\fR"
+.IP \fBNEIGHBOUR_DEVS\fR="\fBall\fR|\fBdetect\fR|\fBlist:\fIdev1\fR\ [\fIdev2\fR\ ...]"
 Controls on which interfaces to add/remove ARP records for a container IP, also
-which interfaces to use to query/announce ARP. If this is set to \fBdetect\fR,
-the right network interface (the one which is in the same subnet as a CT IP)
-will be chosen automatically. Any other value restores old (as of vzctl 3.0.19
-or older) behavior, when all the possible interfaces were used.
+which interfaces to use to query/announce ARP.
+
+If set to \fBall\fR, an empty string, or unset, all possible
+network interfaces (i.e. the ones that are UP and doesn't have NOARP,
+SLAVE, or LOOPBACK flags) are used. This is the default mode.
+
+If set to \fBdetect\fR, the right network interface
+(i.e. the one which is in the same subnet as a container IP)
+will be chosen automatically.
+
+If the value starts with \fBlist:\fR prefix, the space-separated list of
+interfaces following the prefix is used.
 .IP \fBERROR_ON_ARPFAIL\fR=\fByes\fR|\fBno\fR
 In case the value of this parameter is set to \fByes\fR, vzctl will fail to
 start a container if there is another host with the same IP present
