--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2009, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2000-2015, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -219,10 +219,28 @@ vz_get_neighbour_devs()
 	[ -n "$NETDEVICES" ] || vzwarning 'Device list is empty'
 	[ -n "$1" -a -n "$NETDEVICES" ] || return 1
 
-	if [ "$NEIGHBOUR_DEVS" != 'detect' ]; then
+	case "$NEIGHBOUR_DEVS" in
+	   detect)
+		# Fall through to detection code below
+		;;
+	   list:*)
+		echo "${NEIGHBOUR_DEVS#list:}"
+		return 0
+		;;
+	   all|"")
 		echo $NETDEVICES
 		return 0
-	fi
+		;;
+	   *)
+		cat << EOF >&2
+WARNING: unknown value for NEIGHBOUR_DEVS: ${NEIGHBOUR_DEVS}.
+Please fix it in @PKGCONFDIR@/vz.conf; see man vz.conf for allowed values.
+EOF
+		# Assume "all" for now
+		echo $NETDEVICES
+		return 0
+		;;
+	   esac
 
 	local route devs dev netdev
 
