--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2000-2014, Parallels, Inc. All rights reserved.
+# Copyright (C) 2000-2015, Parallels, Inc. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -784,6 +784,7 @@ if [ -f $DDXML ]; then
 	PLOOP=yes
 	# Disable vzquota operations for ploop CT
 	DISK_QUOTA=no
+	DDXML_REMOTE=$VE_PRIVATE_REMOTE/root.hdd/DiskDescriptor.xml
 fi
 
 if [ "$PLOOP" = "yes" ]; then
@@ -949,7 +950,7 @@ fi
 if [ "$PLOOP" = "yes" ]; then
 	TOP_UUID='{5fbaabe3-6958-40ff-92a7-860e329aab41}'
 	vzfsync_files=$($SSH "root@$host" ploop snapshot-list \
-		-u $TOP_UUID -H -o fname $DDXML | sed 1d)
+		-u $TOP_UUID -H -o fname $DDXML_REMOTE | sed 1d)
 	if [ -n "$vzfsync_files" ]; then
 		if $SSH root@$host "vzfsync >/dev/null 2>&1"; then
 			log 2 "Calling vzfsync on ploop deltas"
