vzmigrate: check CPU caps for suspended CT
This commit adds a check for CPU capabilities when migrating a
suspended container. Such a check is needed because if CPU caps
differ, a container might not survive restore after migrating.

To implement this check, a support from the kernel is required
(CPT_TEST_CAPS ioctl for /dev/cpt). Such support was errorneously
removed from the kernel 042stab101.5, but then restored in 042stab107.1,
so any kernels in between those return EAGAIN which we treat as OK
since we can't perform the check needed. In such case, though,
we issue a warning that the kernel should be updated.

vzcptcheck modified accordingly, together with usage and man page.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -460,6 +460,7 @@ print_times() {
 
 check_cpt_props() {
 	local version
+	local id
 
 	log 2 "Checking for CPT version compatibility"
 	version=$(vzcptcheck version)
@@ -473,11 +474,13 @@ check_cpt_props() {
 		exit $MIG_ERR_UNSUP_CPT_VER
 	fi
 
+	test "$state" = "running" && id=$VEID
+
 	log 2 "Checking for CPU flags compatibility"
 	CPU_CAPS=$($SSH root@$host vzcptcheck caps)
 	if [ $? -ne 0 -o "$CPU_CAPS" = "" ]; then
 		log 1 "Warning: can't get remote CPU caps, skipping check"
-	elif ! logexec 1 vzcptcheck caps $VEID $CPU_CAPS; then
+	elif ! logexec 1 vzcptcheck caps $id $CPU_CAPS; then
 		log 0 "CPU capabilities check failed!"
 		log 0 "Destination node CPU is not compatible"
 		if [ $ignore_cpu -eq 1 ]; then
@@ -725,7 +728,7 @@ if [ "$dst_exist" = "exist" ]; then
 	exit $MIG_ERR_EXISTS
 fi
 
-if [ $online -eq 1 ]; then
+if [ $online -eq 1 -o "$suspended" = "suspended" ]; then
 	if ! which vzcptcheck >/dev/null; then
 		log 1 "Warning: no vzcptcheck binary on local node,"
 		log 1 "skipping CPT version and CPU caps checks"
