--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-#  Copyright (C) 2000-2009, Parallels, Inc. All rights reserved.
+#  Copyright (C) 2000-2015, Parallels, Inc. All rights reserved.
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -40,7 +40,7 @@ chown_preload_if_needed()
 
 create_prvt()
 {
-	local TMP AVAIL NEEDED HEADER OPT
+	local AVAIL NEEDED HEADER OPT
 	local TAR_OPT="--numeric-owner -Sp"
 
 	[ -d "$VE_PRVT" ] ||
@@ -49,9 +49,9 @@ create_prvt()
 		vzerror "Tarball does not exist: $PRIVATE_TEMPLATE" ${VZ_FS_NEW_VE_PRVT}
 	HEADER="$(od -A n -N 2 -t x1 -- "$PRIVATE_TEMPLATE")" ||
 		vzerror "Invalid tarball: $PRIVATE_TEMPLATE" ${VZ_FS_NEW_VE_PRVT}
-	TMP="$(df -P "$VE_PRVT")" ||
-		vzerror "Failed to calculate available disk space on $VE_PRVT" ${VZ_FS_NEW_VE_PRVT}
-	AVAIL="$(echo "$TMP" | awk 'END{print $4}')"
+	AVAIL=$(awk "BEGIN {print $(stat -f -c '%a*%s/1024' $VE_PRVT)}")
+	test "${AVAIL}0" -gt 0 ||
+		vzerror "Failed to get available disk space on $VE_PRVT" ${VZ_FS_NEW_VE_PRVT}
 
 	case $HEADER in
 		' 1f 8b') # gzip
