vzoversell: handle unlimited RAM CTs
Some containers might be configured as unlimited
(i.e. infinite physpages and privvmpages limit).

Also, a container might appear as unlimited while
it is being restored from dump (as beancounter limits
are initially set to unlimited and only set to proper
values at the end of the restoration process).

In case such unlimited containers are present,
overcommitment figures shown doesn't make sense,
for example:

> RAM        available: 59.4G  allocated:   16Z  oversell: 29630589707078%
> Swap       available:  177G  allocated: 18.9G  oversell: 10%
> RAM+Swap   available:  237G  allocated:   16Z  oversell: 7411239850072%

The fix is to skip such containers, as we already do for
swap.

Notes:
1 we do not just detect the unlimited container, but also
  mark it with a flag ("U") and explain why.
2 RAM usage and peak usage of an unlimited container
  is still being included into totals, it's just the limit
  that is being ignored.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzoversell.in
+++ b/bin/vzoversell.in
@@ -1,5 +1,5 @@
 #!/bin/sh
-# Copyright (C) 2013, Parallels, Inc. All rights reserved.
+# Copyright (C) 2013-2015, Parallels, Inc. All rights reserved.
 #
 # This program is free software; you can redistribute it and/or
 # modify it under the terms of the GNU General Public License
@@ -99,6 +99,9 @@ function footer() {
 		if (t_flags ~ "R")
 			printf("  R: non-VSwap container, RAM limit guessed " \
 				"based on privvmpages\n");
+		if (t_flags ~ "U")
+			printf("  U: unlimited container, RAM limit " \
+				"not included into totals\n");
 		if (t_flags ~ "S")
 			printf("  S: unlimited swap (ok for non-vswap), " \
 				"not counted into total swap limit\n");
@@ -119,10 +122,16 @@ function process_ct() {
 	flags=""
 
 	if (ram_limit == 0 || ram_limit == 2147483647 || ram_limit == 9223372036854775807) {
-		# Non-VSwap config!
-		flags="R"
-		# Roughly guess limit based on privvmpages / vm_overcommit
-		ram_limit=vm_limit/2
+		if (vm_limit == 2147483647 || vm_limit  == 9223372036854775807) {
+			# Unlimited container?
+			flags="U"
+			ram_limit=0
+		} else {
+			# Non-VSwap config!
+			flags="R"
+			# Roughly guess limit based on privvmpages / vm_overcommit
+			ram_limit=vm_limit/2
+		}
 	}
 	if (swap_limit == 2147483647 || swap_limit == 9223372036854775807) {
 		# Hmm, unlimited swap?
