vzmigrate: rm bashism
As reported by shellcheck, there's no 'let' in POSIX shell.
Interestingly, dash supports it so I guess we're good, but
let's fix it in the interest of purity.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/bin/vzmigrate.in
+++ b/bin/vzmigrate.in
@@ -412,7 +412,7 @@ ploop_copy() {
 
 		# check if ssh is still there
 		kill -0 $pid 2>/dev/null && break
-		let try=try+1
+		try=$((try+1))
 	done
 
 	if [ $try = 5 ]; then
