Fix compile with musl (lack of strndupa)
If strndupa is not defined, use an in-house implementation
using alloca() (code taken from https://goo.gl/roIJt6).

Patch is based on work by Dennis Przytarski.

https://bugs.openvz.org/browse/OVZ-6650

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/configure.ac
+++ b/configure.ac
@@ -130,6 +130,8 @@ AC_CHECK_FUNCS([alarm bzero dup2 endgrent endpwent memset mkdir mkfifo \
 	strrchr strstr strtol strtoul strtoull uname],,
 	AC_MSG_ERROR([some needed function(s) not found]))
 
+AC_CHECK_DECLS([strndupa])
+
 AC_ARG_ENABLE([bashcomp],
               [AS_HELP_STRING([--enable-bashcomp],
                               [Enable bashcompletion support])],
