pathsubst.am: hide error from chmod
This is an addition to commit 302faf2. As noted there,
chmod can fail, and its not an issue if it does. So,
let's hide the error, such as this one from busybox's chmod:

> chmod: unrecognized option: reference=vps-functions.in

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/pathsubst.am
+++ b/pathsubst.am
@@ -31,4 +31,4 @@ pathsubst = sed -e '$(pathsubst_RULES)'
 
 %: %.in
 	$(AM_V_GEN)$(pathsubst) $< > $@
-	@chmod --reference=$< $@ || true
+	@chmod --reference=$< $@ 2>/dev/null || true
