Add pigz support to vzctl create
It can speedup unpack template about 2 and more times.
As example runnig vzctl create with custom 702M size template:
(second and third run vzctl create with this template, file cache already warmed)
 - without pigz
    702MB 0:00:14 [49.4MB/s]

 - with pigz
    702MB 0:00:07 [90.9MB/s]

--- a/scripts/vps-create.in
+++ b/scripts/vps-create.in
@@ -56,6 +56,8 @@ create_prvt()
 	case $HEADER in
 		' 1f 8b') # gzip
 			OPT=-z
+			# Use pigz for more fast uncompress template if we can
+			pigz -V >/dev/null 2>&1 && TAR_OPT="--use-compress-program=pigz ${TAR_OPT}" && OPT=""
 			NEEDED="$(gzip -l "$PRIVATE_TEMPLATE" | \
 				awk 'END {print int($2/1024)}')"
 			;;
